fix(PR-686): overflow-behavior of pose-items

--- a/src/app/joint-control/pose/pose.component.css
+++ b/src/app/joint-control/pose/pose.component.css
@@ -55,6 +55,7 @@ button:disabled img {
 
 .pose-label {
     user-select: none;
+    overflow: hidden;
 }
 
 .selected .apply-button {
